--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="main.js"></script>
 </head>
 <body>
-  <div id="bar-chart"></div>
+  <div id="bar-chart-1"></div>
+  <div id="bar-chart-2"></div>
 </body>
 </html>
